<resources>
    <string name="app_name">android-kidstories</string>
<<<<<<< Updated upstream
    <string name="read_free_bedtime_stories">Read free bedtime stories, fairytales</string>
    <string name="welcome">Welcome</string>
    <string name="and_other_stories">and other stories</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="not_registered">Not Registered?</string>
    <string name="create_an_account">Create an account</string>
    <string name="google">Google</string>
=======
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">Joshua Atoms</string>
    <string name="name">Name</string>
    <string name="user_image">User Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="no_image_uploaded">No image uploaded</string>
    <string name="save">Save</string>
>>>>>>> Stashed changes
</resources>
