<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        android:theme="?attr/actionBarTheme"
        app:titleMargin="4dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/user_image"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_arrow_back_black_48dp"
            tools:srcCompat="@drawable/ic_arrow_back_black_48dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="casual"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="178dp"
            android:layout_height="178dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/user_image"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/upload_image_button"
                android:fontFamily="@font/roboto"
                android:text="@string/upload_image"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_image_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto"
                android:text="@string/no_image_uploaded"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/save_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>